# pyinset

./: README.md  pyproject.toml
src/: __init__.py  pyinset.py
